[FEATURE] add page principal

--- a/index.html
+++ b/index.html
@@ -78,5 +78,8 @@
         <a href="mailto:juegoTrivia@outlook.com">juegoTrivia@outlook.com</a>
         <a href="mailto:juegoTrivia@outlook.com">juegoTrivia@outlook.com</a>
     </footer>
+
+    <script type="text/javascript" src="back/index.js"> </script>
+
 </body>
 </html>
