--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <a href="mailto:juegoTrivia@outlook.com">juegoTrivia@outlook.com</a>
     </footer>
 
-    <script type="text/javascript" src="back/index.js"> </script>
+    <script type="module" src="back/index.js"> </script>
+    
 
 </body>
 </html>
